static/psi4manual/1.2.1/_sources/api/psi4.core.MintsHelper.rst.txt
MintsHelper
===========

.. currentmodule:: psi4.core

.. autoclass:: MintsHelper
   :show-inheritance:

   .. rubric:: Methods Summary

   .. autosummary::

      ~MintsHelper.ao_3coverlap
      ~MintsHelper.ao_angular_momentum
      ~MintsHelper.ao_dipole
      ~MintsHelper.ao_dkh
      ~MintsHelper.ao_ecp
      ~MintsHelper.ao_efp_multipole_potential
      ~MintsHelper.ao_erf_eri
      ~MintsHelper.ao_eri
      ~MintsHelper.ao_eri_shell
      ~MintsHelper.ao_f12
      ~MintsHelper.ao_f12_double_commutator
      ~MintsHelper.ao_f12_scaled
      ~MintsHelper.ao_f12_squared
      ~MintsHelper.ao_f12g12
      ~MintsHelper.ao_kinetic
      ~MintsHelper.ao_nabla
      ~MintsHelper.ao_oei_deriv1
      ~MintsHelper.ao_oei_deriv2
      ~MintsHelper.ao_overlap
      ~MintsHelper.ao_potential
      ~MintsHelper.ao_pvp
      ~MintsHelper.ao_quadrupole
      ~MintsHelper.ao_tei_deriv1
      ~MintsHelper.ao_tei_deriv2
      ~MintsHelper.ao_traceless_quadrupole
      ~MintsHelper.basisset
      ~MintsHelper.cdsalcs
      ~MintsHelper.core_hamiltonian_grad
      ~MintsHelper.electric_field
      ~MintsHelper.factory
      ~MintsHelper.integral
      ~MintsHelper.integrals
      ~MintsHelper.integrals_erf
      ~MintsHelper.integrals_erfc
      ~MintsHelper.kinetic_grad
      ~MintsHelper.mo_erf_eri
      ~MintsHelper.mo_eri
      ~MintsHelper.mo_f12
      ~MintsHelper.mo_f12_double_commutator
      ~MintsHelper.mo_f12_squared
      ~MintsHelper.mo_f12g12
      ~MintsHelper.mo_oei_deriv1
      ~MintsHelper.mo_oei_deriv2
      ~MintsHelper.mo_spin_eri
      ~MintsHelper.mo_tei_deriv1
      ~MintsHelper.mo_tei_deriv2
      ~MintsHelper.mo_transform
      ~MintsHelper.nbf
      ~MintsHelper.one_electron_integrals
      ~MintsHelper.overlap_grad
      ~MintsHelper.perturb_grad
      ~MintsHelper.petite_list
      ~MintsHelper.petite_list1
      ~MintsHelper.play
      ~MintsHelper.potential_grad
      ~MintsHelper.set_print
      ~MintsHelper.set_rel_basisset
      ~MintsHelper.so_angular_momentum
      ~MintsHelper.so_dipole
      ~MintsHelper.so_dkh
      ~MintsHelper.so_ecp
      ~MintsHelper.so_kinetic
      ~MintsHelper.so_nabla
      ~MintsHelper.so_overlap
      ~MintsHelper.so_potential
      ~MintsHelper.so_quadrupole
      ~MintsHelper.so_traceless_quadrupole
      ~MintsHelper.sobasisset

   .. rubric:: Methods Documentation

   .. automethod:: ao_3coverlap
   .. automethod:: ao_angular_momentum
   .. automethod:: ao_dipole
   .. automethod:: ao_dkh
   .. automethod:: ao_ecp
   .. automethod:: ao_efp_multipole_potential
   .. automethod:: ao_erf_eri
   .. automethod:: ao_eri
   .. automethod:: ao_eri_shell
   .. automethod:: ao_f12
   .. automethod:: ao_f12_double_commutator
   .. automethod:: ao_f12_scaled
   .. automethod:: ao_f12_squared
   .. automethod:: ao_f12g12
   .. automethod:: ao_kinetic
   .. automethod:: ao_nabla
   .. automethod:: ao_oei_deriv1
   .. automethod:: ao_oei_deriv2
   .. automethod:: ao_overlap
   .. automethod:: ao_potential
   .. automethod:: ao_pvp
   .. automethod:: ao_quadrupole
   .. automethod:: ao_tei_deriv1
   .. automethod:: ao_tei_deriv2
   .. automethod:: ao_traceless_quadrupole
   .. automethod:: basisset
   .. automethod:: cdsalcs
   .. automethod:: core_hamiltonian_grad
   .. automethod:: electric_field
   .. automethod:: factory
   .. automethod:: integral
   .. automethod:: integrals
   .. automethod:: integrals_erf
   .. automethod:: integrals_erfc
   .. automethod:: kinetic_grad
   .. automethod:: mo_erf_eri
   .. automethod:: mo_eri
   .. automethod:: mo_f12
   .. automethod:: mo_f12_double_commutator
   .. automethod:: mo_f12_squared
   .. automethod:: mo_f12g12
   .. automethod:: mo_oei_deriv1
   .. automethod:: mo_oei_deriv2
   .. automethod:: mo_spin_eri
   .. automethod:: mo_tei_deriv1
   .. automethod:: mo_tei_deriv2
   .. automethod:: mo_transform
   .. automethod:: nbf
   .. automethod:: one_electron_integrals
   .. automethod:: overlap_grad
   .. automethod:: perturb_grad
   .. automethod:: petite_list
   .. automethod:: petite_list1
   .. automethod:: play
   .. automethod:: potential_grad
   .. automethod:: set_print
   .. automethod:: set_rel_basisset
   .. automethod:: so_angular_momentum
   .. automethod:: so_dipole
   .. automethod:: so_dkh
   .. automethod:: so_ecp
   .. automethod:: so_kinetic
   .. automethod:: so_nabla
   .. automethod:: so_overlap
   .. automethod:: so_potential
   .. automethod:: so_quadrupole
   .. automethod:: so_traceless_quadrupole
   .. automethod:: sobasisset
